fixed Help footer the horizontal alignment is a little off and copyright section as well

--- a/docroot/sites/all/themes/SBAC/sass/custom.scss
+++ b/docroot/sites/all/themes/SBAC/sass/custom.scss
@@ -538,7 +538,9 @@ input[type="file"], input[type="checkbox"], input[type="radio"], select{
       width: 16px;
       height: 16px;
       display: inline-block;
-      background-size: cover;
+      background-size: contain;
+			vertical-align: middle;
+			margin-top: -1px;
     }
   }
 }
@@ -555,7 +557,7 @@ input[type="file"], input[type="checkbox"], input[type="radio"], select{
     color: $white;
 
     p, ul {
-      line-height: emCalc(35px);
+      line-height: 42px;
       margin: 0;
     }
 
@@ -583,7 +585,8 @@ input[type="file"], input[type="checkbox"], input[type="radio"], select{
 
         &.help {
           background-image: url('../images/icons/help-small.png');
-          background-size: contain;
+          background-size: 16px 16px;
+					vertical-align: top;
         }
 
         &.feedback {
